<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg_white">

        <LinearLayout
            android:id="@+id/layoutIndicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_12sdp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/indicator1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_4sdp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_ob_selected" />

            <ImageView
                android:id="@+id/indicator2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_4sdp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_ob_un_selected" />

            <ImageView
                android:id="@+id/indicator3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_4sdp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_ob_un_selected" />

        </LinearLayout>

        <TextView
            android:id="@+id/txtSkip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_12sdp"
            android:fontFamily="@font/nunito_bold"
            android:text="@string/skip"
            android:textColor="@color/txt_AAAABB"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintBottom_toBottomOf="@id/layoutIndicator"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/layoutIndicator" />

        <TextView
            android:id="@+id/btnContinue"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginHorizontal="@dimen/_12sdp"
            android:layout_marginBottom="@dimen/_24sdp"
            android:background="@drawable/state_bg_btn_continue_onb"
            android:fontFamily="@font/nunito_bold"
            android:gravity="center"
            android:paddingVertical="@dimen/_10sdp"
            android:text="@string/continue_caplock"
            android:textAlignment="center"
            android:textColor="@color/txt_white"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintBottom_toBottomOf="parent" />

        <com.example.baseprojectflamingo.commons.custom_view.NonScrollableRecyclerView
            android:id="@+id/rcvOnb"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/_20sdp"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toTopOf="@id/btnContinue"
            app:layout_constraintTop_toBottomOf="@id/layoutIndicator"
            tools:listitem="@layout/item_onboarding" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>